Fixed front page and player spacing

--- a/_120Stat/stats/static/stats/style.css
+++ b/_120Stat/stats/static/stats/style.css
@@ -4,22 +4,37 @@ body {
 	color: black;
 }
 h1 {
-	font-size: 36px;
+	font-size: 56px;
+	color: white;
+	margin: 20px;
 }
 h2 {
 	font-size: 24px;
 	padding: 0;
 	margin: 3px;
 }
+h5 {
+	border-bottom: 2px solid black;
+	padding-top: 4px;
+	padding-bottom: 6px;
+	font-size: 32px;
+	margin: 2px;
+	text-align: center;
+}
+a:visited {
+	color: azure;
+}
+label {
+	color: azure;
+}
 table {
 	width: 100%;
 	margin: 0 auto;
 }
 caption {
-	border-bottom: 2px solid black;
-	padding-top: 4px;
-	padding-bottom: 6px;
-	font-size: 32px;
+	font-size: 24px;
+	padding: 0;
+	margin: 2px;
 }
 tr {
 	border: 1px solid black;
@@ -31,20 +46,42 @@ td {
 table tr td:nth-child(2) {
 	text-align: right;
 }
+
+
+/* Classes */
+.navPage {
+	padding: 10px;
+	margin-left: 2px;
+	margin-right: 2px;
+	display: inline;
+	position: relative;
+}
+.navPage:hover {
+	background: #2A2A2A;
+}
+.field {
+	margin: 12px;
+}
 .player {
-	width: 20.5%; 
-	height:25%; 
+	width: 20.75%; 
+	height: 25%; 
 	padding: 1%;
 	margin: 1%;
-	border:1px solid black; 
+	border: 1px solid black; 
 	background-color: #66CCFF; 
 	float: left;
 	border-radius: 20px;
 /*	text-shadow: 10px;
 	box-shadow: 10px;*/
 }
-.basicInfo {
-	min-height: 800px;
+.basicInfoDiv {
+	min-height: 320px;
+}
+.careerInfoDiv {
+	min-height: 650px;
+}
+.fantasyInfoDiv {
+	min-height: 280px;
 }
 .oddRow {
 	
@@ -53,12 +90,23 @@ table tr td:nth-child(2) {
 	background-color: rgba(0, 0, 0, .1);
 	border-radius: 20px;
 }
+
+/* IDs */
+#navBar {
+	text-align:center;
+	color: azure;
+	margin-bottom: 10px;
+	margin-left: -10px;
+	margin-right: -10px;
+	padding: 10px;
+	background-color: #333333;
+}
+#playerForm {
+	text-align: center;
+}
 #players {
 	/*position: fixed;*/
     /* center the element */
-    right: 0;
-    left: 0;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
 	overflow: auto;
 }
